# beauty_tutti

./: .gitignore  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.app.json  vite.config.ts
docs/: index.html
docs/assets/: index-93xRqcXG.css  index-CBMjQGbO.css  index-CCaJuxNU.js  index-CCdNapb4.js  index-DQPieuyc.js  index-Dr81c9zg.js
public/: 404.html
server/: auth_utils.py  db.py  main.py  models.py  schemas.py  seed.py
src/: App.tsx  index.css
src/api/: client.ts
src/components/: BookingSuccessSummary.tsx  ClientLayout.tsx  MasterShell.tsx  Modal.tsx  RouteGuards.tsx  Spinner.tsx  StatusBadge.tsx
src/components/master/: MasterBookingCard.tsx  MasterEmptyState.tsx  MasterStatCard.tsx
src/context/: BookingContext.tsx
src/data/: authDemo.ts  bookings.ts  masters.ts  queries.ts  salonHours.ts  salons.ts  services.ts  users.ts
src/pages/: AccountPage.tsx  ClientHomePage.tsx  ClientLoginPage.tsx  ClientRegisterPage.tsx  LandingPage.tsx  LoginPage.tsx  MasterLoginPage.tsx  MasterPage.tsx
src/pages/book/: BookConfirmPage.tsx  BookDatetimePage.tsx  BookDonePage.tsx  BookLayout.tsx  BookMasterPage.tsx  BookSalonPage.tsx  BookServicePage.tsx
src/types/: models.ts
src/utils/: bookingIntervals.test.ts  bookingIntervals.ts  formatRuWeekday.ts  pastTime.ts  schedule.test.ts  schedule.ts  slots.test.ts  slots.ts  validation.ts  visitStatus.ts
